--- a/style.css
+++ b/style.css
@@ -6,3 +6,14 @@ td {
   padding: 5px;
   text-align: center;
 }
+#container {
+  display: flex;
+  flex-wrap: wrap;
+}
+#container > div {
+  background-color: springgreen;
+  font-size: 20px;
+  margin: 20px;
+  padding: 20px;
+  width: 200px;
+}
